--- a/app/src/main/res/layout/frg_enter_new_password.xml
+++ b/app/src/main/res/layout/frg_enter_new_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.sporlif.activities.user.recover_frg.FrgEnterNewPassword">
+    tools:context="com.sporlif.activities.user.recoverFrg.FrgEnterNewPassword">
 
     <include layout="@layout/actionbar_toolbar"/>
 
